New look Demo section
- New look demo section

--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
                   <div class="sticky-bottom">
                     <div class="wrapper">
                     <div class="socialsBlock purpleSection">
-                      <a class="lc-primary-action sr-button inline button-1 button-small circled"><i class="fa fa-envelope"></i> Email us </a>   
+                      <a class="sr-button inline button-1 button-small circled"><i class="fa fa-envelope"></i> Email us </a>   
                       </div>
                       <p><span>
                         Give us a call <a href="tel:+31-20-308-00-68">+31-20-308-00-68</a>
                       </span>
                       </p>
-                      <a class="lc-primary-action sr-button inline button-1 button-small circled"><i class="fa fa-rocket"></i> Request demo</a>
+                      <a class="sr-button inline button-1 button-small circled" href="#reqdemo"><i class="fa fa-rocket"></i> Request demo</a>
                     </div>
 
                   </div>
@@ -247,7 +247,7 @@
                     <h2>Contract innovation for Real Estate</h2>
                     <h3 class="subtitle-1 mobile-h3">
 	                    <p>
-                        LegalThings eliminates the pain points that are associated with the drafting of real estate agreements. Streamline your everyday processes and work more efficient using innovative features and implementations. 
+                        LegalThings eliminates the pain points that are associated with the drafting of Real Estate agreements. Streamline your everyday processes and work more efficient using innovative features and implementations. 
 	                    </p>
 	                    <p><strong>
 		                 Go paperless with LegalThings today. 
@@ -335,16 +335,16 @@
             <div id="what-is-legal" class="purpleSectionBg general-advantages row-section text-light">
                 <div class="wrapper clearfix">
                     <div class="column one-half">
-                        <h4><strong>Transform the drafting process of real estate agreements</strong></h4>
+                        <h4><strong>Transform the drafting process of Real Estate agreements</strong></h4>
                         <div class="spacer-small"></div>
 
-                        <p>Drafting any real estate agreement is a bureaucratic and time-consuming process. Property-dependent data, reviews by multiple parties, version control, signing, and alteration requests by clients are just some of the factors that come into play. Delays caused by human error are often hard to avoid. 
+                        <p>Drafting any Real Estate agreement is a bureaucratic and time-consuming process. Property-dependent data, reviews by multiple parties, version control, signing, and alteration requests by clients are just some of the factors that come into play. Delays caused by human error are often hard to avoid. 
                         </p>
 
                         <p>When one takes into account that the complete rental agreement process consists not only of the rental agreement, but also of rental proposals, fact sheets, allonges and termination agreements, the benefits of automation become evident.
                         </p>
 
-                        <p>With LegalThings, any real estate company is able to automate and digitize the entire contract lifecycle process. By integrating with your existing systems and solutions, LegalThings makes your organization work significantly more efficient, quick and error-proof.
+                        <p>With LegalThings, any Real Estate company is able to automate and digitize the entire contract lifecycle process. By integrating with your existing systems and solutions, LegalThings makes your organization work significantly more efficient, quick and error-proof.
                         </p>
                     </div>
                     <div class="column one-half last-col">
@@ -367,7 +367,7 @@
                 <div class="column one-half last-col">
                   <h5> LITE: </h5>
                     <p>
-                      The LegalThings contract drafting-tool facilitates (real estate) B2C & B2B-providers with the integration of LegalForms in our SaaS, on websites of in applications through plugins and API’s.
+                      The LegalThings contract drafting-tool facilitates (Real Estate) B2C & B2B-providers with the integration of LegalForms in our SaaS, on websites of in applications through plugins and API’s.
                     </p>
                     <p>
                      Have clients and relations draft their own agreements from within your environments. Edit in Microsoft office and sign digitally with blockchain technology for unique customer experiences.
@@ -388,10 +388,10 @@
                          <div class="column one-half">
                           <h5> REGULAR: </h5>
                           <p>
-                            Streamline your internal real estate processes with the LTO Network workflow engine through adding actors, notifications and due dates to your existing contract lifecycle processes in your custom white label environment.
+                            Streamline your internal Real Estate processes with the LTO Network workflow engine through adding actors, notifications and due dates to your existing contract lifecycle processes in your custom white label environment.
                           </p>
                           <p>
-                            Drafting real estate agreements becomes easier and less error-prone by importing static building data right into your agreement. Top up your processes with advanced IT-integrations into other applications, such as CRM-, financial, and building management systems.
+                            Drafting Real Estate agreements becomes easier and less error-prone by importing static building data right into your agreement. Top up your processes with advanced IT-integrations into other applications, such as CRM-, financial, and building management systems.
                           </p>
                         </div>
                         <div class="column one-half last-col">
@@ -413,7 +413,7 @@
                       A contract describes procedures to execute one or more promises. With Live Contract technology we turn contracts and processes into business rules and data that allows automation in a decentralized way. Involve third parties and share data automatically by creating decentralized workflows through blockchain. 
                     </p>
                     <p>
-                    This way complex inter-organizational business processes will belong to the past and real estate standardization is within reach. 
+                    This way complex inter-organizational business processes will belong to the past and Real Estate standardization is within reach. 
                     </p>
                     <div class="spacer-medium"></div>
                       <a href="https://lto.network" target="_blank" class="sr-button button-1 button-small circled"> Check out LTO Network</a>
@@ -423,14 +423,14 @@
             <div class="spacer-small"></div>
             <div class="butnot" id="butnot">
             <div class="wrapper butnot-section text-light">
-              <h2 class="align-center"> But, I'm not a real estate company? </h2>
+              <h2 class="align-center"> But, I'm not a Real Estate company? </h2>
               <div class="spacer-medium"></div>
               <div class="column one-half">
               <p>
                 That’s fine. A lot of companies aren’t. 
               </p>
               <p>
-                We’re currently rolling out solutions for various other industries other than real estate. If your company requires better and faster document drafting and more efficient process management, LegalThings is here to help your organization. Regardless of the industry you’re operating in. 
+                We’re currently rolling out solutions for various other industries other than Real Estate. If your company requires better and faster document drafting and more efficient process management, LegalThings is here to help your organization. Regardless of the industry you’re operating in. 
               </p>
               <p>
               <a href="#reqdemo" class="sr-button button-1-ghost button-small circled"><i class="fa fa-rocket"></i> Get started now for free!</a>
@@ -1059,42 +1059,43 @@
                     </h2>
                     <div class="spacer-medium"></div>
                     <h5 class="subtitle-2 align-center">
-	                  <p> Experience LegalThings yourself through our real estate dedicated demo environment. </p>
+	                  <p> Experience LegalThings yourself through our Real Estate dedicated demo environment. </p>
 	                  <p> Get in touch with us today for an exclusive peak. </p>
                     </h5>
-                    <div class="spacer-small"></div>
+                    <div class="spacer-medium"></div>
                     <div class="form">
                    <form action="https://firm24.us17.list-manage.com/subscribe/post" method="post">
           			  <input type="hidden" name="u" value="1508bdb96b4379a9aeb07c6e8">
            				 <input type="hidden" name="id" value="f8769372ea">
-                  <div class="column one-fifth align-center">
-                  <fieldset>
+                  <div class="column one-third align-center button-mob">
+                  <img src="img/bg/reqdemo.png" alt="Request demo">
+                  </div>
+                  <div class="column one-third align-center">
+                  <fieldset class="fieldset-2">
                   <input placeholder="First name" type="text" tabindex="1" name="MERGE1" id="MERGE1" size="25" required>
                   </fieldset>
-                  </div>
-                  <div class="column one-fifth align-center">
-                  <fieldset>
+
+                  <fieldset class="fieldset-2">
                   <input placeholder="Last name" type="text" tabindex="2" name="MERGE2" id="MERGE2" size="25" required>
                   </fieldset>
-                  </div>
-                  <div class="reverse-div">
-                  <div class="column one-fifth align-center">
-                   <fieldset class="fieldset-2">
+
+                  <fieldset class="fieldset-2">
                   <input placeholder="Company name" type="text" tabindex="3" name="MERGE3" id="MERGE3" size="25" required>
                   </fieldset>
-                  <div class="spacer-small button-mob"></div>
-                  <fieldset>
-                     <button name="b_1508bdb96b4379a9aeb07c6e8_f8769372ea" type="submit" id="contact-submit" data-submit="...Sending" class="sr-button inline button-1 button-small circled"><i class="fa fa-rocket"></i> Submit!</button>
-                    </fieldset>
+
                   </div>
-                  <div class="column one-fifth align-center">
-                  <fieldset>
+
+                  <div class="column one-third last-col align-center">
+                  	<fieldset class="fieldset-2">
                    <input placeholder="Email Address" type="email" tabindex="4" name="MERGE0" id="MERGE0" size="25" required>
                    </fieldset>
-                  </div>
-                  <div class="column one-fifth last-col align-center">
-                    <fieldset>                 
+
+                   <fieldset class="fieldset-2">                 
                     <input placeholder="Phone Number" type="tel" tabindex="5" name="MERGE4" id="MERGE4" size="25" required>
+                    </fieldset>
+                  
+                  <fieldset class="fieldset-2">
+                     <button name="b_1508bdb96b4379a9aeb07c6e8_f8769372ea" type="submit" id="contact-submit" data-submit="...Sending" class="sr-button inline button-1 button-small circled"><i class="fa fa-rocket"></i> Submit!</button>
                     </fieldset>
                   </div>
               	</div>
@@ -1119,12 +1120,18 @@
                     </div>
                     <div class="footer-menu">
 					<div class="hero-nav__socials">
+						<a href="https://medium.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
+					            <i class="fa fa-medium"></i>
+				            </a>
 				            <a href="https://twitter.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
 					            <i class="icon-twitter"></i>
 				            </a>
 				            <a href="https://www.youtube.com/channel/UCaHcF-xterKYTKSpY4xgKiw" class="hero-nav__socials-icon"
 				               target="_blank">
 					            <i class="icon-youtube-3"></i>
+				            </a>
+				            <a href="https://github.com/legalthings" class="hero-nav__socials-icon" target="_blank">
+					            <i class="ion-social-github"></i>
 				            </a>
 			            </div>
                         <!--a href="documents/terms-and-conditions.pdf" target="_blank">Terms and Conditions</a!-->
