--- a/terms-cookies.html
+++ b/terms-cookies.html
@@ -10,9 +10,9 @@
 		<meta property="og:image:height" content="500" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <!-- FONTS -->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+        <!--link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"!-->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Lora:400italic,700italic" rel="stylesheet" type="text/css">
+        <!--link href="https://fonts.googleapis.com/css?family=Lora:400italic,700italic" rel="stylesheet" type="text/css"!-->
         <!-- CSS -->
         <!--<link rel="stylesheet" id="default-style-css" href="files/css/style.css" type="text/css" media="all"/>-->
         <!--<link rel="stylesheet" id="fontawesome-style-css" href="files/css/font-awesome.min.css" type="text/css" media="all"/>-->
@@ -576,12 +576,18 @@ The settings for removing cookies can be found in the toolbar of your browser. Y
                     </div>
                     <div class="footer-menu">
           <div class="hero-nav__socials">
+                    <a href="https://medium.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
+                      <i class="fa fa-medium"></i>
+                    </a>
                     <a href="https://twitter.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
                       <i class="icon-twitter"></i>
                     </a>
                     <a href="https://www.youtube.com/channel/UCaHcF-xterKYTKSpY4xgKiw" class="hero-nav__socials-icon"
                        target="_blank">
                       <i class="icon-youtube-3"></i>
+                    </a>
+                    <a href="https://github.com/legalthings" class="hero-nav__socials-icon" target="_blank">
+                      <i class="ion-social-github"></i>
                     </a>
                   </div>
                         <!--a href="documents/terms-and-conditions.pdf" target="_blank">Terms and Conditions</a!-->
