--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         Give us a call <a href="tel:+31-20-308-00-68">+31-20-308-00-68</a>
                       </span>
                       </p>
-                      <a class="sr-button inline button-1 button-small circled" href="#reqdemo"><i class="fa fa-rocket"></i> Request demo</a>
+                      <a class="sr-button inline button-1 button-small circled" href="#reqdemo"><i class="fa fa-rocket"></i> Request free access</a>
                     </div>
 
                   </div>
@@ -257,8 +257,8 @@
                     <div class="hero-img-hdr"></div>
                     <div class="spacer-small"></div>
 					<p class="hero__buttons">
-                        <a href="#contactinfo" class="sr-button button-1 button-small circled">
-                          Get in touch
+                        <a href="#contactinfo" class="sr-button inline button-1 button-small circled">
+                         Get free access
                         </a>
                         <a href="#blockchain"" class="sr-button button-1 button-small button-small-hero circled">
                           Blockchain
@@ -480,7 +480,7 @@
                     </p>
                     <p>
                     <i class="fa fa-check-circle green-i"></i>
-                    <strong> GDPR compliance:</strong> All processes and interations are GDPR and regulatory compliant, which is another unique feature of LTO network solution.
+                    <strong> GDPR compliance:</strong> All processes and interactions are GDPR and regulatory compliant, which is another unique feature of LTO network solution.
                     </p>
                     </div>
                     <div class="column one-half last-col">
@@ -1055,7 +1055,7 @@
             	<div class="spacer-medium"></div>
                 <div class="wrapper row-section reqdemo-section">
                     <h2 class="align-center">
-                        <strong>Sign up for a demo</strong>
+                        <strong>Request access to the demo portal</strong>
                     </h2>
                     <div class="spacer-medium"></div>
                     <h5 class="subtitle-2 align-center">
@@ -1095,7 +1095,7 @@
                     </fieldset>
                   
                   <fieldset class="fieldset-2">
-                     <button name="b_1508bdb96b4379a9aeb07c6e8_f8769372ea" type="submit" id="contact-submit" data-submit="...Sending" class="sr-button inline button-1 button-small circled"><i class="fa fa-rocket"></i> Submit!</button>
+                     <button name="b_1508bdb96b4379a9aeb07c6e8_f8769372ea" type="submit" id="contact-submit" data-submit="...Sending" class="sr-button inline button-1 button-small circled"><i class="fa fa-rocket"></i> Request access!</button>
                     </fieldset>
                   </div>
               	</div>
