--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <link rel="stylesheet" href="files/dist/compress.css">
         <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"!-->
 		    <link rel="stylesheet" href="files/css/iso_bootstrap4.0.0min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
         <!--<link rel="stylesheet" href="files/css/style.css">-->
         <!-- FAVICON -->
@@ -60,19 +61,16 @@
   <!-- End Google Tag Manager (noscript) -->
 
 
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62115237-2"></script>
-  <script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-62115237-1"></script>
+<script>
   window.dataLayer = window.dataLayer || [];
-
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'UA-62115237-2');
-  </script>
+
+  gtag('config', 'UA-62115237-1');
+</script>
+
 
   <script>
   var alignment = 'right';
@@ -250,7 +248,7 @@
                         LegalThings eliminates the pain points that are associated with the drafting of Real Estate agreements. Streamline your everyday processes and work more efficient using innovative features and implementations. 
 	                    </p>
 	                    <p><strong>
-		                 Go paperless with LegalThings today. 
+		                 Go paperless with LegalThings today.
 	                    </p></strong>
 
                     </h3>
