--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta property="og:image" content="/img/favicon.png" />
         <meta property="og:image:width" content="500" />
-		<meta property="og:image:height" content="500" />
+		    <meta property="og:image:height" content="500" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <!-- FONTS -->
         <!--link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"!-->
@@ -38,7 +38,6 @@
         <link rel="stylesheet" href="files/dist/compress.css">
         <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"!-->
 		    <link rel="stylesheet" href="files/css/iso_bootstrap4.0.0min.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
         <!--<link rel="stylesheet" href="files/css/style.css">-->
         <!-- FAVICON -->
@@ -1114,7 +1113,8 @@
             <footer id="footer" class="footer-dark text-light">
                 <div class="wrapper">
                     <div class="copyright">
-                        ©2018 LegalThings
+                        ©2018 <strong>LegalThings</strong><br>
+                        Incorporated by <a href="https://www.firm24.com/bv-oprichten/" target="_blank" alt="Firm24" class="text-light"><strong>Firm24</strong></a>
                     </div>
                     <div class="footer-menu">
 					<div class="hero-nav__socials">
@@ -1135,10 +1135,11 @@
                         <!--a href="documents/terms-and-conditions.pdf" target="_blank">Terms and Conditions</a!-->
                     </div>
                     <div class="footer-menu">
-                        <a href="terms-cookies.html" target="_blank">Terms & Conditions</a> <br>
-                        <a href="terms-cookies.html#cookies" target="_blank" class="button-mob">Cookie statement</a>
+                        <a href="terms-cookies.html" target="_blank" class="text-light" style="text-decoration: none!important;">Terms & Conditions</a> <br>
+                        <a href="terms-cookies.html#cookies" target="_blank" class="text-light button-mob">Cookie statement</a>
                     </div>
                 </div>
+                <div class="spacer-small"></div>
             </footer>
             <!--  END FOOTER -->
         </div>
@@ -1176,14 +1177,14 @@
         <!-- SCRIPTS -->
 
     <!-- Twitter universal website tag code -->
-    <script>
-        !function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
-        },s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
-        a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
-        // Insert Twitter Pixel ID and Standard Event data below
-        twq('init','nytjh');
-        twq('track','PageView');
-    </script>
-    <!-- End Twitter universal website tag code -->
+<script>
+!function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
+},s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
+a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
+// Insert Twitter Pixel ID and Standard Event data below
+twq('init','o0h1d');
+twq('track','PageView');
+</script>
+<!-- End Twitter universal website tag code -->
     </body>
 </html>
