--- a/terms-cookies.html
+++ b/terms-cookies.html
@@ -191,12 +191,12 @@
 
               <div class="hero-nav hero-nav--mobile">
                 <div class="hero-nav__menu">
-                  <a href="#" class="hero-nav__menu-list hero-nav__menu-list">Home</a>
-                        <a href="#about" class="hero-nav__menu-list">About</a>
-                        <a href="#solutions" class="hero-nav__menu-list hero-nav__menu-list">Solutions</a>
+                  <a href="index.html" class="hero-nav__menu-list hero-nav__menu-list">Home</a>
+                        <a href="index.html#about" class="hero-nav__menu-list">About</a>
+                        <a href="index.html#solutions" class="hero-nav__menu-list hero-nav__menu-list">Solutions</a>
                         <!--a href="#features" class="hero-nav__menu-list">Features</a!-->
-                        <a href="#benefits" class="hero-nav__menu-list hero-nav__menu-list">Benefits</a>
-                        <a href="#blockchain" class="hero-nav__menu-list">Blockchain</a>
+                        <a href="index.html#benefits" class="hero-nav__menu-list hero-nav__menu-list">Benefits</a>
+                        <a href="index.html#blockchain" class="hero-nav__menu-list">Blockchain</a>
                         <a href="https://lto.network" class="hero-nav__menu-list" target="_blank">LTO Network</a>
                 </div>
                 <div class="hero-nav__socials">
@@ -225,12 +225,12 @@
                     <h1>LegalThings</h1>
                   </div>
                   <div class="hero-nav__menu">
-                  <a href="#" class="hero-nav__menu-list hero-nav__menu-list">Home</a>
-                        <a href="#about" class="hero-nav__menu-list">About</a>
-                        <a href="#solutions" class="hero-nav__menu-list hero-nav__menu-list">Solutions</a>
+                  <a href="index.html" class="hero-nav__menu-list hero-nav__menu-list">Home</a>
+                        <a href="index.html#about" class="hero-nav__menu-list">About</a>
+                        <a href="index.html#solutions" class="hero-nav__menu-list hero-nav__menu-list">Solutions</a>
                         <!--a href="#features" class="hero-nav__menu-list">Features</a!-->
-                        <a href="#benefits" class="hero-nav__menu-list hero-nav__menu-list">Benefits</a>
-                        <a href="#blockchain" class="hero-nav__menu-list">Blockchain</a>
+                        <a href="index.html#benefits" class="hero-nav__menu-list hero-nav__menu-list">Benefits</a>
+                        <a href="index.html#blockchain" class="hero-nav__menu-list">Blockchain</a>
                         <a href="https://lto.network" class="hero-nav__menu-list" target="_blank">LTO Network</a>
                   </div>
                   <div class="hero-nav__socials">
@@ -259,6 +259,50 @@
             </section>
 
             <!-- HERO  -->
+            <section id="cookies">
+              <div class="core-verticals row-section wrapper whiteSection-quote" id="cookies">
+                <div class="wrapper core-verticals">
+        <h2 class="align-center" style="font-weight: 200;">
+        About LegalThings
+        </h2>
+        <div class="spacer-medium"></div>
+        <div class="wrapper">
+        <h1 class="new-h1"><strong> LegalThings.io has been incorporated by Firm24. </strong></h1>
+<p>
+Every company needs to start with incorporation. Legalthings.io has been incorporated by Firm24. This company is highly recommended by us, as it is a highly trustworthy partner for the most important stage of your BV.
+</p>
+<h1 class="new-h1"><strong>What can Firm24 do for you as an entrepreneur?</strong></h1>
+<p>
+Especially for international entrepreneurs or companies looking to settle down in the Netherlands they provide <a href="https://www.firm24.com/en/incorporate-dutch-bv/" target="_blank" alt="Firm24">incorporation services</a> as well as advice during the process and after setting up the business. The execute the process of incorporation mostly online working intensively together with notaries and legal professionals, while maintaining a high level of customer service and support.
+</p>
+<p>
+Moreover, the service of Firm24 does not stop at the incorporation of your company, it is also the right partner for all of your intended adaptations to your company. They will help with transfers of shares and amendments in the deeds of incorporation. In addition, their legal department provides many suitable contracts and agreements, which you can adapt to fit the preferences of you and your company.
+Besides, they provide a helping hand in the administration for the accounting.
+ </p>
+<h1 class="new-h1"><strong>Three additional reasons why we chose Firm24:</strong></h1>
+<p>
+ <ol>
+  <li>
+24-hour service: from the start to beginning Firm24 has the capacity to fully incorporate your business in the Netherlands. The regular procedure will only take 3 to 5 working days.
+</li>
+<li>
+Fully English and internationally adopted online procedure and support for the incorporation of internationally orientated businesses.
+</li>
+<li>
+Fixed price: Firm24 is clear in their statements about pricing and does not work with recurring costs.
+</li>
+</ol>
+</p>
+<div class="spacer-mini"></div>
+<p>
+Wil jij een BV oprichten? Start dan direct <a href="https://www.firm24.com/bv-oprichten/" target="_blank" alt="Firm24">hier je BV oprichting</a> en je kan binnen 5 werkdagen beginnen met ondernemen. 
+</p>
+        </div>
+        </div>
+     </section>
+
+     <!-- Terms and conditions !-->
+
 <section class="core-verticals row-section wrapper whiteSection-quote" id="t-and-c">
         <div class="whiteSection-title align-center">
         <h2 class="whiteSection-title align-center" id="t-and-c" style="font-weight: 200;">
@@ -570,13 +614,14 @@ The settings for removing cookies can be found in the toolbar of your browser. Y
      </section>
             <!-- FOOTER -->
             <footer id="footer" class="footer-dark text-light">
-                <div class="wrapper">
+               <div class="wrapper">
                     <div class="copyright">
-                        ©2018 LegalThings
+                        ©2018 <strong>LegalThings</strong><br>
+                        Incorporated by <a href="https://www.firm24.com/bv-oprichten/" target="_blank" alt="Firm24" class="text-light"><strong>Firm24</strong></a>
                     </div>
                     <div class="footer-menu">
           <div class="hero-nav__socials">
-                    <a href="https://medium.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
+            <a href="https://medium.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
                       <i class="fa fa-medium"></i>
                     </a>
                     <a href="https://twitter.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
@@ -593,8 +638,8 @@ The settings for removing cookies can be found in the toolbar of your browser. Y
                         <!--a href="documents/terms-and-conditions.pdf" target="_blank">Terms and Conditions</a!-->
                     </div>
                     <div class="footer-menu">
-                        <a href="terms-cookies.html" target="_blank">Terms & Conditions</a> <br>
-                        <a href="terms-cookies.html#cookies" target="_blank" class="button-mob">Cookie statement</a>
+                        <a href="terms-cookies.html" target="_blank" class="text-light" style="text-decoration: none!important;">Terms & Conditions</a> <br>
+                        <a href="terms-cookies.html#cookies" target="_blank" class="text-light button-mob">Cookie statement</a>
                     </div>
                 </div>
             </footer>
