--- a/thank-you.html
+++ b/thank-you.html
@@ -190,12 +190,12 @@
 
               <div class="hero-nav hero-nav--mobile">
                 <div class="hero-nav__menu">
-                  <a href="#" class="hero-nav__menu-list hero-nav__menu-list">Home</a>
-                        <a href="#about" class="hero-nav__menu-list">About</a>
-                        <a href="#solutions" class="hero-nav__menu-list hero-nav__menu-list">Solutions</a>
+                  <a href="index.html" class="hero-nav__menu-list hero-nav__menu-list">Home</a>
+                        <a href="index.html#about" class="hero-nav__menu-list">About</a>
+                        <a href="index.html#solutions" class="hero-nav__menu-list hero-nav__menu-list">Solutions</a>
                         <!--a href="#features" class="hero-nav__menu-list">Features</a!-->
-                        <a href="#benefits" class="hero-nav__menu-list hero-nav__menu-list">Benefits</a>
-                        <a href="#blockchain" class="hero-nav__menu-list">Blockchain</a>
+                        <a href="index.html#benefits" class="hero-nav__menu-list hero-nav__menu-list">Benefits</a>
+                        <a href="index.html#blockchain" class="hero-nav__menu-list">Blockchain</a>
                         <a href="https://lto.network" class="hero-nav__menu-list" target="_blank">LTO Network</a>
                 </div>
                 <div class="hero-nav__socials">
@@ -224,12 +224,12 @@
                     <h1>LegalThings</h1>
                   </div>
                   <div class="hero-nav__menu">
-                  <a href="#" class="hero-nav__menu-list hero-nav__menu-list">Home</a>
-                        <a href="#about" class="hero-nav__menu-list">About</a>
-                        <a href="#solutions" class="hero-nav__menu-list hero-nav__menu-list">Solutions</a>
+                  <a href="index.html" class="hero-nav__menu-list hero-nav__menu-list">Home</a>
+                        <a href="index.html#about" class="hero-nav__menu-list">About</a>
+                        <a href="index.html#solutions" class="hero-nav__menu-list hero-nav__menu-list">Solutions</a>
                         <!--a href="#features" class="hero-nav__menu-list">Features</a!-->
-                        <a href="#benefits" class="hero-nav__menu-list hero-nav__menu-list">Benefits</a>
-                        <a href="#blockchain" class="hero-nav__menu-list">Blockchain</a>
+                        <a href="index.html#benefits" class="hero-nav__menu-list hero-nav__menu-list">Benefits</a>
+                        <a href="index.html#blockchain" class="hero-nav__menu-list">Blockchain</a>
                         <a href="https://lto.network" class="hero-nav__menu-list" target="_blank">LTO Network</a>
                   </div>
                   <div class="hero-nav__socials">
@@ -268,12 +268,16 @@
 
             <!-- FOOTER -->
             <footer id="footer" class="footer-dark text-light">
-                <div class="wrapper">
+               <div class="wrapper">
                     <div class="copyright">
-                        ©2018 LegalThings
+                        ©2018 <strong>LegalThings</strong><br>
+                        Incorporated by <a href="https://www.firm24.com/bv-oprichten/" target="_blank" alt="Firm24" class="text-light"><strong>Firm24</strong></a>
                     </div>
                     <div class="footer-menu">
           <div class="hero-nav__socials">
+            <a href="https://medium.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
+                      <i class="fa fa-medium"></i>
+                    </a>
                     <a href="https://twitter.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
                       <i class="icon-twitter"></i>
                     </a>
@@ -281,12 +285,15 @@
                        target="_blank">
                       <i class="icon-youtube-3"></i>
                     </a>
+                    <a href="https://github.com/legalthings" class="hero-nav__socials-icon" target="_blank">
+                      <i class="ion-social-github"></i>
+                    </a>
                   </div>
                         <!--a href="documents/terms-and-conditions.pdf" target="_blank">Terms and Conditions</a!-->
                     </div>
                     <div class="footer-menu">
-                        <a href="terms-cookies.html" target="_blank">Terms & Conditions</a> <br>
-                        <a href="terms-cookies.html#cookies" target="_blank" class="button-mob">Cookie statement</a>
+                        <a href="terms-cookies.html" target="_blank" class="text-light" style="text-decoration: none!important;">Terms & Conditions</a> <br>
+                        <a href="terms-cookies.html#cookies" target="_blank" class="text-light button-mob">Cookie statement</a>
                     </div>
                 </div>
             </footer>
