--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
         <!-- DEFAULT META TAGS -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <meta property="og:image" content="/img/favicon.png" />
-        <meta property="og:image:width" content="500" />
-		    <meta property="og:image:height" content="500" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta property="og:title" content="LegalThings">
+        <meta property="og:description" content="Contract innovation for Real Estate">
+        <meta property="og:image" content="/img/lt-logo.png">
+        <meta property="og:image:width" content="100" />
+		<meta property="og:image:height" content="100" />
+        <meta property="og:url" content="http://www.legalthings.io/index.html">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- FONTS -->
         <!--link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"!-->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,800" rel="stylesheet" type="text/css">
@@ -254,7 +258,7 @@
                     <div class="hero-img-hdr"></div>
                     <div class="spacer-small"></div>
 					<p class="hero__buttons">
-                        <a href="#contactinfo" class="sr-button inline button-1 button-small circled">
+                        <a href="#reqdemo" class="sr-button inline button-1 button-small circled">
                          Get free access
                         </a>
                         <a href="#blockchain"" class="sr-button button-1 button-small button-small-hero circled">
