--- a/index.html
+++ b/index.html
@@ -301,11 +301,6 @@
 				    </a>
 			    </div>
 			    <div class="hero_customers_container__image">
-				    <a href="https://www.deloitte.com" target="_blank">
-				    <img src="img/customers/deloitte.png"/>
-				    </a>
-			    </div>
-			    <div class="hero_customers_container__image">
 				    <a href="https://firm24.com" target="_blank">
 				    <img src="img/customers/firm24-color.png"/>
 				    </a>
@@ -1115,35 +1110,39 @@
 
             <!-- FOOTER -->
             <footer id="footer" class="footer-dark text-light">
-                <div class="wrapper">
+                <div class="wrapper column-section">
+                  <div class="column one-third">
                     <div class="copyright">
-                        ©2018 <strong>LegalThings</strong><br>
-                        Incorporated by <a href="https://www.firm24.com/bv-oprichten/" target="_blank" alt="Firm24" class="text-light"><strong>Firm24</strong></a>
-                    </div>
+                    ©2018 <strong>LegalThings</strong><br>
+                        <small>
+                        Incorporated by <a href="https://www.firm24.com/bv-oprichten/" target="_blank" alt="Firm24" class="text-light"><strong>Firm24</strong></a></small>
+                  </div>
+                  </div>
+                  <div class="column one-third align-center">
                     <div class="footer-menu">
-					<div class="hero-nav__socials">
-						<a href="https://medium.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
-					            <i class="fa fa-medium"></i>
-				            </a>
-				            <a href="https://twitter.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
-					            <i class="icon-twitter"></i>
-				            </a>
-				            <a href="https://www.youtube.com/channel/UCaHcF-xterKYTKSpY4xgKiw" class="hero-nav__socials-icon"
-				               target="_blank">
-					            <i class="icon-youtube-3"></i>
-				            </a>
-				            <a href="https://github.com/legalthings" class="hero-nav__socials-icon" target="_blank">
-					            <i class="ion-social-github"></i>
-				            </a>
-			            </div>
-                        <!--a href="documents/terms-and-conditions.pdf" target="_blank">Terms and Conditions</a!-->
+                    <div class="hero-nav__socials">
+                        <a href="https://medium.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
+                      <i class="fa fa-medium"></i>
+                    </a>
+                    <a href="https://twitter.com/getlegalthings" class="hero-nav__socials-icon" target="_blank">
+                      <i class="icon-twitter"></i>
+                    </a>
+                    <a href="https://www.youtube.com/channel/UCaHcF-xterKYTKSpY4xgKiw" class="hero-nav__socials-icon"
+                       target="_blank">
+                      <i class="icon-youtube-3"></i>
+                    </a>
+                    <a href="https://github.com/legalthings" class="hero-nav__socials-icon" target="_blank">
+                      <i class="ion-social-github"></i>
+                    </a>
+                        </div>
                     </div>
-                    <div class="footer-menu">
-                        <a href="terms-cookies.html" target="_blank" class="text-light" style="text-decoration: none!important;">Terms & Conditions</a> <br>
-                        <a href="terms-cookies.html#cookies" target="_blank" class="text-light button-mob">Cookie statement</a>
-                    </div>
+                  </div>
+                  <div class="column one-third last-col">
+                  <div class="footer-menu privacy">
+                  <a href="terms-cookies.html" target="_blank" class="text-light" style="text-decoration: none!important;">Terms & Conditions</a> <br>
+                  <a href="terms-cookies.html#cookies" target="_blank" class="text-light button-mob">Cookie statement</a>
                 </div>
-                <div class="spacer-small"></div>
+            </div>
             </footer>
             <!--  END FOOTER -->
         </div>
